--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hallo verden</h1>
-    
+    <h1>hallo verden i am lost</h1>
+    <h2>what</h2>
 </body>
 </html>
